--- a/conf/default.conf
+++ b/conf/default.conf
@@ -47,19 +47,19 @@ server {
     gzip on;
 }
 
-server {
-    if ($host = demo.vdx.vn) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
+# server {
+#     if ($host = demo.vdx.vn) {
+#         return 301 https://$host$request_uri;
+#     } # managed by Certbot
 
 
-    listen 80;
-    listen [::]:80;
-    server_name demo.vdx.vn;
-    return 404; # managed by Certbot
+#     listen 80;
+#     listen [::]:80;
+#     server_name demo.vdx.vn;
+#     return 404; # managed by Certbot
 
 
-}
+# }
 
 server {
     listen 80 default_server;
